# hermes-local-knowledge

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  __init__.py  after-install.md  memory.md  plugin.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  security.yml
docs/: github-security.md
docs/superpowers/plans/: 2026-07-09-okf-compatibility-fixes.md
docs/superpowers/specs/: 2026-07-09-okf-compatibility-fixes-design.md
examples/local-knowledge-router-skill/: SKILL.md
hermes_local_knowledge/: __init__.py  cli.py  constants.py  evaluation.py  handlers.py  hooks.py  indexer.py  models.py  okf.py  okf_worker.py  paths.py  plugin.py  runtime.py  scanners.py  schemas.py  search.py  storage.py  telemetry.py  text_utils.py  tooling.py
hermes_local_knowledge/skills/local-knowledge-router/: SKILL.md
scripts/: check_version_policy.py  compare_historical_query_versions.py
skills/local-knowledge-router/: SKILL.md
tests/: search_regression_cases.json  test_cli_install.py  test_cli_okf.py  test_hooks.py  test_indexer.py  test_install_smoke.py  test_okf.py  test_okf_worker.py  test_plugin.py  test_version_policy.py
