[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-local-knowledge"
version = "0.2.4"
description = "Reusable Hermes Agent plugin for local capability indexing"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alex Stepanov" }]
keywords = ["hermes-agent", "plugin", "knowledge-router", "local-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<10",
    "PyYAML>=6,<7",
]
mutation = [
    "mutmut>=3,<4",
]

[project.urls]
Repository = "https://github.com/stepanov1975/hermes-local-knowledge"
Issues = "https://github.com/stepanov1975/hermes-local-knowledge/issues"

[project.entry-points."hermes_agent.plugins"]
local_knowledge = "hermes_local_knowledge.plugin"

[tool.mutmut]
source_paths = ["hermes_local_knowledge"]
also_copy = ["plugin.yaml"]
pytest_add_cli_args_test_selection = ["-k", "not install_smoke"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
